--- a/_config.yml
+++ b/_config.yml
@@ -42,8 +42,8 @@ app:
 #
 # Marketing
 #
-marketing_header: Does Awesome Stuff # Optional
-marketing_desc: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+marketing_header: Running Interval Generator # Optional
+marketing_desc: Shake up your running workouts with the Walk Run Sprint (WRS) interval routine generator. Reach your cardio and running goals with ease. Randomly generate routines by selecting duration and interval. Start your workout and follow along with Walk, Run, Sprint intervals.
 
 #
 # Social Links
@@ -51,12 +51,12 @@ marketing_desc: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do 
 # Includes an icon for each username you enter
 #
 social-links:
-  github:
+  github: akeslo
   facebook:
   twitter:
   pinterest:
   instagram:
-  email:
+  email: adam.keslowitz@gmail.com
   youtube: # channel/<your_long_string> or <user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
 
@@ -81,11 +81,11 @@ device: iphone-se-silver-vertical # REQUIRED
 # Theme Settings
 #
 background_color: "#989898" # Optional
-background_image: /images/backgrounds/58-usersthink-stock-image-web.jpg # Optional - Use Relative path e.g. images/backgrounds/image.jpg
+background_image: /images/backgrounds/Unsplash-1.jpg # Optional - Use Relative path e.g. images/backgrounds/image.jpg
 text_color: white # Optional
 link_color: # Optional
 social_link_color: white # Optional
-download_button_background_color: "#0191FF" # Optional
+download_button_background_color: "#62ACF0" # Optional
 download_button_text_color: white; # Optional
 
 #
@@ -93,7 +93,7 @@ download_button_text_color: white; # Optional
 #
 # If you want specific meta info for your <head></head> tags
 #
-title: # Optional - Enter your site title
+title: Walk • Run • Sprint # Optional - Enter your site title
 description: # Optional - Enter your site description
 
 #
